<resources>
    <string name="app_name">Coding Exam</string>

    <!--Form-->
    <string name="fullname">Full Name</string>
    <string name="emailaddress">Email Address</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="_age">Age</string>
    <string name="_gender">Gender</string>
    <string name="submit">SUBMIT</string>
    <string name="okay">OKAY</string>
    <string name="information">INFORMATION</string>

</resources>