<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvBookingDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/information"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBookingDetails"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/fullname" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBookingDetails"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/emailaddress" />

    <TextView
        android:id="@+id/tvEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFullName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/mobilenumber" />

    <TextView
        android:id="@+id/tvMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmailAddress"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="viewEnd" />

    <View
        android:id="@+id/line"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:layout_below="@+id/tvMobileNumber"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvBday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/dateofbirth" />

    <TextView
        android:id="@+id/tvBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:maxLength="30"
        android:maxLines="3"
        android:singleLine="false"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/_tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBday"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_age" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBirthday"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:maxLength="30"
        android:maxLines="3"
        android:singleLine="false"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/_tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_tvAge"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_gender" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAge"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:maxLength="30"
        android:maxLines="3"
        android:textAlignment="viewEnd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOkay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGender"
        android:layout_gravity="bottom"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corners_button_layout"
        android:backgroundTint="@color/app_theme_blue"
        android:padding="10dp"
        android:text="@string/okay"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>